# inspireface-macos

./: .gitignore  CMakeLists.txt  main.cpp
inspireface-lib/include/: inspireface.h  intypedef.h
inspireface/include/: herror.h  inspireface.h
models/Tracking-CoreML6-E0.mlmodelc/_00_scrfd_500m_bnkps_shape160x160.mlmodelc/: model.espresso.shape  model.espresso.weights
models/Tracking-CoreML6-E0.mlmodelc/_00_scrfd_500m_bnkps_shape192x192.mlmodelc/: model.espresso.shape
models/Tracking-CoreML6-E0.mlmodelc/_00_scrfd_500m_bnkps_shape256x256.mlmodelc/: model.espresso.net  model.espresso.shape
models/Tracking-CoreML6-E0.mlmodelc/_00_scrfd_500m_bnkps_shape320x320.mlmodelc/: model.espresso.shape
models/Tracking-CoreML6-E0.mlmodelc/_00_scrfd_500m_bnkps_shape640x640.mlmodelc/: model.espresso.shape
models/Tracking-CoreML6-E0.mlmodelc/_07_pose-quality.mlmodelc/: model.espresso.net  model.espresso.shape  model.espresso.weights
